<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_10">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/ivProductItem"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:importantForAccessibility="no"
                    android:foreground="@color/overlay_dark_30"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_shop_9"
                    app:layout_collapseMode="parallax" />

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:layout_marginTop="-40dp"
                    android:layout_marginRight="@dimen/spacing_middle"
                    android:elevation="10dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_middle"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tvCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/grey_90"
                            tools:text="category example" />

                    <TextView
                            android:id="@+id/tvBrand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/grey_60"
                            tools:text="brand example" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:gravity="end"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/tvPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textColor="@color/light_green_700"
                                android:textStyle="bold"
                                tools:text="$ 80.00" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_middle"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">


            </androidx.cardview.widget.CardView>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_middle"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_middle"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/grey_90" />

                    <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/grey_60"
                            tools:text="lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo lungo " />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_middle"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_middle"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colors"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/fab_color_1"
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:layout_margin="@dimen/spacing_middle"
                                android:clickable="true"
                                android:focusable="true"
                                android:importantForAccessibility="no"
                                android:tint="@android:color/white"
                                app:backgroundTint="@color/indigo_500"
                                app:elevation="0dp"
                                app:fabSize="mini"
                                app:rippleColor="@android:color/white" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/fab_color_2"
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:layout_margin="@dimen/spacing_middle"
                                android:clickable="true"
                                android:focusable="true"
                                android:importantForAccessibility="no"
                                android:tint="@android:color/white"
                                app:backgroundTint="@color/pink_700"
                                app:elevation="0dp"
                                app:fabSize="mini"
                                app:rippleColor="@android:color/white"
                                app:srcCompat="@drawable/ic_done" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/fab_color_3"
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:layout_margin="@dimen/spacing_middle"
                                android:clickable="true"
                                android:focusable="true"
                                android:importantForAccessibility="no"
                                android:tint="@android:color/white"
                                app:backgroundTint="@color/grey_500"
                                app:elevation="0dp"
                                app:fabSize="mini"
                                app:rippleColor="@android:color/white" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/fab_color_4"
                                android:layout_width="@dimen/spacing_xmlarge"
                                android:layout_height="@dimen/spacing_xmlarge"
                                android:layout_margin="@dimen/spacing_middle"
                                android:clickable="true"
                                android:focusable="true"
                                android:importantForAccessibility="no"
                                android:tint="@android:color/white"
                                app:backgroundTint="@color/green_500"
                                app:elevation="0dp"
                                app:fabSize="mini"
                                app:rippleColor="@android:color/white" />

                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:background="@color/grey_10" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sizes"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                        <Spinner
                                android:id="@+id/spSizes"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:paddingStart="30dp"
                                android:paddingEnd="40dp"/>

                    </LinearLayout>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:background="@color/grey_10" />


            </androidx.cardview.widget.CardView>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xxxlarge" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>