...
                    android:layout_height="50dp"
                    android:elevation="10dp"
                    android:visibility="gone"
                    android:layout_gravity="center" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_catalog_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/catalog_item"
                    >
            </androidx.recyclerview.widget.RecyclerView>

...
